--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -34,11 +34,448 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('tic-tac-toe.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TL</th>\n",
+       "      <th>TM</th>\n",
+       "      <th>TR</th>\n",
+       "      <th>ML</th>\n",
+       "      <th>MM</th>\n",
+       "      <th>MR</th>\n",
+       "      <th>BL</th>\n",
+       "      <th>BM</th>\n",
+       "      <th>BR</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>x</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>b</td>\n",
+       "      <td>b</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>b</td>\n",
+       "      <td>o</td>\n",
+       "      <td>b</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  TL TM TR ML MM MR BL BM BR  class\n",
+       "0  x  x  x  x  o  o  x  o  o   True\n",
+       "1  x  x  x  x  o  o  o  x  o   True\n",
+       "2  x  x  x  x  o  o  o  o  x   True\n",
+       "3  x  x  x  x  o  o  o  b  b   True\n",
+       "4  x  x  x  x  o  o  b  o  b   True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TL</th>\n",
+       "      <th>TM</th>\n",
+       "      <th>TR</th>\n",
+       "      <th>ML</th>\n",
+       "      <th>MM</th>\n",
+       "      <th>MR</th>\n",
+       "      <th>BL</th>\n",
+       "      <th>BM</th>\n",
+       "      <th>BR</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>x</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>b</td>\n",
+       "      <td>b</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>b</td>\n",
+       "      <td>o</td>\n",
+       "      <td>b</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  TL TM TR ML MM MR BL BM BR class\n",
+       "0  x  x  x  x  o  o  x  o  o  True\n",
+       "1  x  x  x  x  o  o  o  x  o  True\n",
+       "2  x  x  x  x  o  o  o  o  x  True\n",
+       "3  x  x  x  x  o  o  o  b  b  True\n",
+       "4  x  x  x  x  o  o  b  o  b  True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data.astype(\"category\")\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_columns = data.select_dtypes(['category']).columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[cat_columns] = data[cat_columns].apply(lambda x: x.cat.codes)\n",
+    "# this will make it numerical! x will be 2, o will be 1 and b will be 0!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TL</th>\n",
+       "      <th>TM</th>\n",
+       "      <th>TR</th>\n",
+       "      <th>ML</th>\n",
+       "      <th>MM</th>\n",
+       "      <th>MR</th>\n",
+       "      <th>BL</th>\n",
+       "      <th>BM</th>\n",
+       "      <th>BR</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   TL  TM  TR  ML  MM  MR  BL  BM  BR  class\n",
+       "0   2   2   2   2   1   1   2   1   1      1\n",
+       "1   2   2   2   2   1   1   1   2   1      1\n",
+       "2   2   2   2   2   1   1   1   1   2      1\n",
+       "3   2   2   2   2   1   1   1   0   0      1\n",
+       "4   2   2   2   2   1   1   0   1   0      1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we will separate the inputs and the outputs\n",
+    "\n",
+    "X = data.drop(['class'], axis = 1)\n",
+    "y = data['class']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-cb594a3f30fb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# finally we can normalize the input data!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;31m#X_normalized =\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
+   "source": [
+    "# finally we can normalize the input data!\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "X_normalized = tf.keras.utill.normalize(X, axis = 1)"
    ]
   },
   {
@@ -144,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
